# HELIX

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  build.sh  phase3_diff.patch  run_benchmark.sh  run_tests.sh
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  matmul_benchmark.cpp  nn_benchmark.cpp  tensor_ops_benchmark.cpp  training_benchmark.cpp
docs/: architecture.md  benchmark_report.md  coding_convention.md  design_decisions.md  developer_guide.md  plot_benchmark.py
examples/: CMakeLists.txt  linear_regression.cpp  xor_mlp.cpp
include/: helix.hpp  value.hpp
include/autograd/: autograd_meta.hpp  engine.hpp  function.hpp  function_utils.hpp  graph_builder.hpp  node.hpp
include/backend/: cpu_backend.hpp  simd_backend.hpp
include/benchmark/: benchmark_reporter.hpp  benchmark_result.hpp  benchmark_runner.hpp  timer.hpp
include/core/: allocator.hpp  autograd_meta.hpp  broadcast.hpp  device.hpp  dispatcher.hpp  dtype.hpp  graph_builder.hpp  shape.hpp  storage.hpp  stride.hpp  tensor.hpp  tensor_factory.hpp  tensor_impl.hpp  value.hpp
include/nn/: linear.hpp  loss.hpp  module.hpp  relu.hpp  sequential.hpp
include/optim/: optimizer.hpp  sgd.hpp
src/: backward.cpp  ops.cpp  value.cpp
src/autograd/: autograd_meta.cpp  backward.cpp  engine.cpp  function.cpp  graph_builder.cpp
src/backend/kernels/: matmul.cpp  ops.cpp  reduce.cpp
src/backend/matmul/: avx2_dot_matmul.cpp  avx2_matmul.cpp  avx2_micro_matmul.cpp  blocked_matmul.cpp  matmul_backend.cpp  matmul_config.hpp  matmul_kernel.hpp  naive_matmul.cpp  openmp_matmul.cpp
src/backend/simd/: simd_avx2.hpp  simd_backend.cpp
src/benchmark/: benchmark_reporter.cpp  benchmark_runner.cpp
src/core/: allocator.cpp  broadcast.cpp  dispatcher.cpp  ops.cpp  storage.cpp  tensor.cpp  tensor_factory.cpp  value.cpp
src/nn/: linear.cpp  loss.cpp  module.cpp  relu.cpp  sequential.cpp
src/optim/: sgd.cpp
stress/: CMakeLists.txt  linear_stress.cpp  module_stress.cpp  nn_integration_stress.cpp  relu_stress.cpp  sequential_stress.cpp
tests/: CMakeLists.txt  autograd_ops_test.cpp  autograd_test.cpp  benchmark_test.cpp  broadcast_shape_test.cpp  broadcast_stride_test.cpp  core_test.cpp  grad_check.cpp  grad_check.hpp  gradient_check_test.cpp  linear_test.cpp  loss_test.cpp  manipulation_test.cpp  matmul_opt_test.cpp  matmul_test.cpp  module_test.cpp  nn_integration_test.cpp  ops_test.cpp  reduce_test.cpp  relu_test.cpp  sequential_test.cpp  sgd_test.cpp  tensor_test.cpp  training_test.cpp  value_test.cpp
